--- a/college.html
+++ b/college.html
@@ -83,7 +83,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                             <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-                            <a class="dropdown-item" href="impotantdates.html">Important Dates</a>
+                            <a class="dropdown-item" href="importantdates.html">Important Dates</a>
                             <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
                             <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
                             <a class="dropdown-item" href="schedule.html">Schedule</a>
@@ -94,7 +94,7 @@
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Committes &darr;
+             Committees &darr;
            </a>
            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
              <a class="dropdown-item" href="committee.html">Committes</a>
