--- a/department.html
+++ b/department.html
@@ -83,7 +83,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                             <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-                            <a class="dropdown-item" href="impotantdates.html">Important Dates</a>
+                            <a class="dropdown-item" href="importantdates.html">Important Dates</a>
                             <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
                             <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
                             <a class="dropdown-item" href="schedule.html">Schedule</a>
@@ -94,10 +94,10 @@
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Committes &darr;
+             Committees &darr;
            </a>
            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-             <a class="dropdown-item" href="committee.html">Committes</a>
+             <a class="dropdown-item" href="committee.html">Committees</a>
              <a class="dropdown-item" href="technical.html">Technical</a>
              <a class="dropdown-item" href="advisory.html">Advisory</a>
              <a class="dropdown-item" href="organizing.html">Organizing</a>
@@ -161,7 +161,7 @@
 <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">IT</h3>
+        <h3 class="mb-4 h2 mt-2">Department of Computer Science and Engineering</h3>
         <div class="d-flex flex-row">
             <div class="college-image-container">
                 <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
@@ -181,10 +181,37 @@
   </div>
 </div>
 
+
+<div class="row justify-content-center">
+  <div class="col-lg-8">
+    <div class="mb-4 mt-5">
+      <h3 class="mb-4 h2 mt-2">Department of Information Technology</h3>
+      <div class="d-flex flex-row">
+          <div class="college-image-container">
+              <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
+          </div>
+          <div class="college-description">
+              <p>
+                  Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
+              </p>
+              <a href="https://anits.edu.in/#" target="_blank">
+                  <button class="btn btn-primary">
+                      Read More
+                  </button>
+              </a>
+          </div>  
+      </div>
+    </div>
+    
+
+ 
+</div>
+</div>
+
 <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">CSE</h3>
+        <h3 class="mb-4 h2 mt-2">Department of Computer Science and Engineering (AI&ML, DS)</h3>
         <div class="d-flex flex-row">
             <div class="college-image-container">
                 <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
@@ -207,31 +234,7 @@
   </div>
 </div>
 
-<div class="row justify-content-center">
-    <div class="col-lg-8">
-      <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">CSM</h3>
-        <div class="d-flex flex-row">
-            <div class="college-image-container">
-                <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
-            </div>
-            <div class="college-description">
-                <p>
-                    Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-                </p>
-                <a href="https://anits.edu.in/#" target="_blank">
-                    <button class="btn btn-primary">
-                        Read More
-                    </button>
-                </a>
-            </div>  
-        </div>
-      </div>
-      
 
-   
-  </div>
-</div>
 
 </section>
 
