--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
               <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-              <a class="dropdown-item" href="impotantdates.html">Important Dates</a>
+              <a class="dropdown-item" href="importantdates.html">Important Dates</a>
               <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
               <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
               <a class="dropdown-item" href="schedule.html">Schedule</a>
@@ -94,10 +94,10 @@
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Committes &darr;
+             Committees &darr;
            </a>
            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-             <a class="dropdown-item" href="committee.html">Committes</a>
+             <a class="dropdown-item" href="committee.html">Committees</a>
              <a class="dropdown-item" href="technical.html">Technical</a>
              <a class="dropdown-item" href="advisory.html">Advisory</a>
              <a class="dropdown-item" href="organizing.html">Organizing</a>
@@ -805,7 +805,7 @@
 						<h5 class="text-uppercase letter-spacing mb-4">Venue location</h5>
 						<h6 class="text-color mb-3">18 - 21 December, 2019 </h6>	
 						<p class="lead">Near Three Temples Bheemunipatnam,  <br>Sanghivalasa, Visakhapatnam, Andhra Pradesh 531162 </p>
-						<a href="contact.html"><i class="tf-ion-ios-location mr-2"></i>View Map location</a>
+						<a href="organizing.html"><i class="tf-ion-ios-location mr-2"></i>View Map location</a>
 					</div>
 				</div>
 			</div>
