--- a/organizing.html
+++ b/organizing.html
@@ -44,89 +44,89 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
-  <nav class="navbar navbar-expand-lg main-nav">
-    <div class="container">
-       <h5 class="mt-2 mb-2 left-align">6th International Conference on
-         <br>
-         Smart Computing and Informatics
-       </h5>
-      </a>
+ 	<nav class="navbar navbar-expand-lg main-nav">
+ 		<div class="container">
+        <h5 class="mt-2 mb-2 left-align">6th International Conference on
+          <br>
+          Smart Computing and Informatics
+        </h5>
+ 			</a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class=""><i class="fas fa-bars"></i>
-        </span>
-      </button>
+ 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+ 				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+ 				<span class=""><i class="fas fa-bars"></i>
+         </span>
+ 			</button>
 
-      <!--  MAIN MENU  -->
-      <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
+ 			<!--  MAIN MENU  -->
+ 			<div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+ 				<ul class="navbar-nav mx-auto">
+ 					<li class="nav-item">
+ 						<a class="nav-link" href="index.html">Home</a>
+ 					</li>
 
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             About &darr;
-           </a>
-           <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-             <a class="dropdown-item" href="college.html">College</a>
-             <a class="dropdown-item" href="department.html">Department</a>
-           </div>
-         </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              For Authors &darr;
+              About &darr;
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-              <a class="dropdown-item" href="importantdates.html">Important Dates</a>
-              <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
-              <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
-              <a class="dropdown-item" href="schedule.html">Schedule</a>
-              <a class="dropdown-item" href="registration.html">Registration</a>
-              <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="college.html">College</a>
+              <a class="dropdown-item" href="department.html">Department</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Committees &darr;
-           </a>
-           <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-             <a class="dropdown-item" href="committee.html">Committees</a>
-             <a class="dropdown-item" href="technical.html">Technical</a>
-             <a class="dropdown-item" href="advisory.html">Advisory</a>
-             <a class="dropdown-item" href="organizing.html">Organizing</a>
-             <!-- <a class="dropdown-item" href="error.html">Regstration</a>
-             <a class="dropdown-item" href="error.html">404 Page</a>
-             <a class="dropdown-item" href="error.html">Supports</a> -->
-           </div>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="sessions.html">Spl. Sessions</a>
-         </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+ 					<li class="nav-item dropdown">
+ 						<a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+ 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+ 							For Authors &darr;
+ 						</a>
+ 						<div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+ 							<a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
+ 							<a class="dropdown-item" href="importantdates.html">Important Dates</a>
+ 							<a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
+ 							<a class="dropdown-item" href="submission.html">Submission Guidelines</a>
+ 							<a class="dropdown-item" href="schedule.html">Schedule</a>
+ 							<a class="dropdown-item" href="registration.html">Registration</a>
+ 							<!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+ 						</div>
+ 					</li>
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Committees &darr;
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item" href="committee.html">Committees</a>
+              <a class="dropdown-item" href="technical.html">Technical</a>
+              <a class="dropdown-item" href="advisory.html">Advisory</a>
+              <a class="dropdown-item" href="organizing.html">Organizing</a>
+              <!-- <a class="dropdown-item" href="error.html">Regstration</a>
+              <a class="dropdown-item" href="error.html">404 Page</a>
+              <a class="dropdown-item" href="error.html">Supports</a> -->
+            </div>
           </li>
-        </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="sessions.html">Spl. Sessions</a>
+          </li>
 
-        <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
-      </div>
-    </div>
-  </nav>
-</header>
+ 					<li class="nav-item">
+ 						<a class="nav-link" href="contact.html">Contact</a>
+ 					</li>
+ 				</ul>
+
+ 				<!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
+ 			</div>
+ 		</div>
+ 	</nav>
+ </header>
  <!-- Navigation End -->
 
 
 
 
  <section class="page-header">
-  <div class="committe-overly"></div>  
+  <div class="technical-overly"></div>  
   <div class="container">
       <div class="row justify-content-center">
           <div class="col-lg-8">
@@ -149,7 +149,6 @@
     <div class="col-lg-8">
       <div class="heading">
         <span class="stroke-text">Committee</span>
-        <h3 class="mb-4 h2 mt-2">Committee</h3>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis fugit doloribus sunt sapiente, corrupti numquam, earum molestiae iure maxime in nostrum sit facilis nemo. Magnam quam voluptate consequatur inventore numquam?</p> -->
       </div>
     </div>
@@ -158,45 +157,41 @@
   <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
-        <h4 class="mb-3 border-bottom pb-3">Chief Patrons</h4>
-        <p style="font-size: larger;">Mr. N.Neeranjan ,CEO, ANES
+        <h4 class="mb-3 border-bottom pb-3">Organizing Committee</h4>
+        <p style="font-size: larger;">........
         </p>
-        
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
       </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Patron</h4>
-        <p style="font-size: larger;">Prof.K.Sri Ramakrishna , Principal, ANITS</p>
+      <div class="mb-4 mt-5">
+        <h4 class="mb-3 border-bottom pb-3">Publicity Committee</h4>
+        <p style="font-size: larger;">........
+        </p>
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
       </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Editorial Board Members</h4>
-        <p style="font-size: larger;">........</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Honarary Chair</h4>
-        <p style="font-size: larger;">Prof.P.V.G.D.Prasad Reddy</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Conference Chairs</h4>
-        <p style="font-size: larger;">Dr.M.Rama Krishna</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">General Chairs</h4>
-        <p style="font-size: larger;">.......</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Publication Chairs</h4>
-        <p style="font-size: larger;">........</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Technical Programme Committee Chairs</h4>
-        <p style="font-size: larger;">........</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Publicity Chairs</h4>
-        <p style="font-size: larger;">........</p>
+      <div class="mb-4 mt-5">
+        <h4 class="mb-3 border-bottom pb-3">Website Committee</h4>
+        <p style="font-size: larger;">Mr. K. Madhusudhan, Assistant Professor, IT, ANITS
+        </p>
+        <p style="font-size: larger;">Mr. G. Ravindranath, Assistant Professor, IT, ANITS
+        </p> 
       </div>
       
-  
+
+   
   </div>
 </div>
 </section>
