--- a/technical.html
+++ b/technical.html
@@ -83,7 +83,7 @@
  						</a>
  						<div class="dropdown-menu" aria-labelledby="navbarDropdown1">
  							<a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
- 							<a class="dropdown-item" href="impotantdates.html">Important Dates</a>
+ 							<a class="dropdown-item" href="importantdates.html">Important Dates</a>
  							<a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
  							<a class="dropdown-item" href="submission.html">Submission Guidelines</a>
  							<a class="dropdown-item" href="schedule.html">Schedule</a>
@@ -94,10 +94,10 @@
            <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Committes &darr;
+              Committees &darr;
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="committee.html">Committes</a>
+              <a class="dropdown-item" href="committee.html">Committees</a>
               <a class="dropdown-item" href="technical.html">Technical</a>
               <a class="dropdown-item" href="advisory.html">Advisory</a>
               <a class="dropdown-item" href="organizing.html">Organizing</a>
@@ -158,19 +158,17 @@
   <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
-        <h4 class="mb-3 border-bottom pb-3">Chief Patrons</h4>
-        <p style="font-size: larger;">Mr. N.Neeranjan ,CEO, ANES
+        <h4 class="mb-3 border-bottom pb-3">Technical Programme Committee</h4>
+        <p style="font-size: larger;">........
         </p>
-        <p style="font-size: larger;">Mr.Bharath Reddy , General Secratary,ANES
+        <p style="font-size: larger;">........
         </p> 
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Patron</h4>
-        <p style="font-size: larger;">Prof.K.Sri Ramakrishna , principal, ANITS</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Editorial Board Member</h4>
-        <p style="font-size: larger;">Prof.M.Ramakrishna Murty</p>
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
+        <p style="font-size: larger;">........
+        </p> 
       </div>
       
 
