--- a/callforpapers.html
+++ b/callforpapers.html
@@ -131,7 +131,7 @@
       <div class="row justify-content-center">
           <div class="col-lg-8">
               <div class="content text-center">
-                  <h1 class="mb-3 text-white text-capitalize letter-spacing">Call for Papers</h1>
+                  <h1 class="mb-3 text-white text-capitalize letter-spacing">For Authors</h1>
                   <div class="divider mx-auto mb-4 bg-white"></div>
                   <ul class="list-inline">
                       <li class="list-inline-item"><a href="index.html">Home</a></li>
@@ -149,8 +149,8 @@
     <div class="col-lg-8">
       <div class="heading">
         <span class="stroke-text">For Authors</span>
-        <div class="divider mt-2 bg-orange"></div>
-        <h3 class="mb-1 h2 mt-4">Call for Papers</h3>
+        <h1 class="mb-1 h2 mt-4">Call for Papers</h1>
+        <h3>SCI 2024</h3>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis fugit doloribus sunt sapiente, corrupti numquam, earum molestiae iure maxime in nostrum sit facilis nemo. Magnam quam voluptate consequatur inventore numquam?</p> -->
       </div>
     </div>
