--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,10 @@
  <header class="header-bar">
  	<nav class="navbar navbar-expand-lg main-nav">
  		<div class="container">
-        <a href="index.html"><h5 class="mt-2 mb-2 left-align">6th International Conference on
+        <a href="index.html"><a href="index.html"><h5 class="mt-2 mb-2 left-align">6th International Conference on
           <br>
           Smart Computing and Informatics
-        </h5></a>
+        </h5></a></a>
  			</a>
 
  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -131,12 +131,12 @@
       <div class="row justify-content-center">
           <div class="col-lg-8">
               <div class="content text-center">
-                  <h1 class="mb-3 text-white text-capitalize letter-spacing">Committees</h1>
+                  <h1 class="mb-3 text-white text-capitalize letter-spacing">Contact</h1>
                   <div class="divider mx-auto mb-4 bg-white"></div>
                   <ul class="list-inline">
                       <li class="list-inline-item"><a href="index.html">Home</a></li>
                       <li class="list-inline-item">/</li>
-                      <li class="list-inline-item"><a href="index.html">Organizing</a></li>
+                      <li class="list-inline-item"><a href="index.html">Contact</a></li>
                   </ul>
               </div>
           </div>
@@ -148,7 +148,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="heading">
-        <span class="stroke-text">Committee</span>
+        <span class="stroke-text">Contact</span>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis fugit doloribus sunt sapiente, corrupti numquam, earum molestiae iure maxime in nostrum sit facilis nemo. Magnam quam voluptate consequatur inventore numquam?</p> -->
       </div>
     </div>
@@ -156,53 +156,20 @@
 
   <div class="row justify-content-center">
     <div class="col-lg-8">
-      <div class="mb-4 mt-5">
-        <h4 class="mb-3 border-bottom pb-3">Organizing Committee</h4>
-          <p style="font-size: larger;">
-            Dr.P E S N Krishna Prasad, Professor & HOD,CSE</p>
-        </p>
-        <p style="font-size: larger;">Dr Mantripragada Rekha Sundari, Professor & HOD,IT
-        </p> 
-        <p style="font-size: larger;">
-          Dr.M.Ramakrishna Murty, Professor & HOD,CSE(AI&ML,DS)
-        </p> 
-        <p style="font-size: larger;">
-          Dr. J.Vijaya Kumar, Professor & HOD, EEE
-        </p> 
-        <p style="font-size: larger;">
-          Dr.B.Jagadeesh, Professor & HOD, ECE
-        </p> 
-        <p style="font-size: larger;">
-          Dr. B.N.D. Narasinga Rao, Professor & HOD, Civil Engineering
-        </p> 
-        <p style="font-size: larger;">
-          Dr. Srikanth Rachakonda, Professor & HOD , Chemical Engineering
-        </p>
-        <p style="font-size: larger;">Dr.B.Naga Raju, Professor & HOD, Mechanical Engineering
-        </p>
-        <p style="font-size: larger;">
-          Dr.M.Kalyana Chakravarthy, HOD,Freshman Engineering Department
-        </p>
-      </div>
-      <div class="mb-4 mt-5">
-        <h4 class="mb-3 border-bottom pb-3">Publicity Committee</h4>
-        <p style="font-size: larger;">........
-        </p>
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-      </div>
-      <div class="mb-4 mt-5">
-        <h4 class="mb-3 border-bottom pb-3">Website Committee</h4>
-        <p style="font-size: larger;">Mr. K. Madhusudhan, Assistant Professor, IT, ANITS
-        </p>
-        <p style="font-size: larger;">Mr. G. Ravindranath, Assistant Professor, IT, ANITS
-        </p> 
+      <div class="d-flex">
+        <div class="icon-phn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+          </svg>
+        </div>
+        <div class="contact-text">
+            <h6 class="pt-3">Prof. Rama Krishna Murthy</h6>
+            <p><a href="tel:+(91) 8341 831 081">+(91) 8341 831 081</a></p>
+             <h6>Mr. Madhu Sudhan</h6>
+            <p><a href="tel:+(91) 9553 393 838">+(91) 9553 393 838</a></p>
+            <h6>Mr. Ravindranath</h6>
+            <p><a href="tel:+(91) 9553 703 364">+(91) 9553 703 364</a></p>
+        </div>
       </div>
       
 
