--- a/schedule.html
+++ b/schedule.html
@@ -44,26 +44,26 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
-    <nav class="navbar navbar-expand-lg main-nav">
-        <div class="container">
+  <nav class="navbar navbar-expand-lg main-nav">
+    <div class="container">
        <h5 class="mt-2 mb-2 left-align">6th International Conference on
          <br>
          Smart Computing and Informatics
        </h5>
-            </a>
+      </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class=""><i class="fas fa-bars"></i>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""><i class="fas fa-bars"></i>
         </span>
-            </button>
+      </button>
 
-            <!--  MAIN MENU  -->
-            <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
+      <!--  MAIN MENU  -->
+      <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
 
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
@@ -76,21 +76,21 @@
            </div>
          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            For Authors &darr;
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-                            <a class="dropdown-item" href="importantdates.html">Important Dates</a>
-                            <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
-                            <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
-                            <a class="dropdown-item" href="schedule.html">Schedule</a>
-                            <a class="dropdown-item" href="registration.html">Registration</a>
-                            <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
-                        </div>
-                    </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              For Authors &darr;
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
+              <a class="dropdown-item" href="importantdates.html">Important Dates</a>
+              <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
+              <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
+              <a class="dropdown-item" href="schedule.html">Schedule</a>
+              <a class="dropdown-item" href="registration.html">Registration</a>
+              <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+            </div>
+          </li>
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -110,15 +110,15 @@
            <a class="nav-link" href="sessions.html">Spl. Sessions</a>
          </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
 
-                <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
-            </div>
-        </div>
-    </nav>
+        <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
+      </div>
+    </div>
+  </nav>
 </header>
  <!-- Navigation End -->
 
@@ -126,17 +126,17 @@
 
 
  <section class="page-header">
-  <div class="department-overly"></div>  
+  <div class="committe-overly"></div>  
   <div class="container">
       <div class="row justify-content-center">
           <div class="col-lg-8">
               <div class="content text-center">
-                  <h1 class="mb-3 text-white text-capitalize letter-spacing">About</h1>
+                  <h1 class="mb-3 text-white text-capitalize letter-spacing">For Authors</h1>
                   <div class="divider mx-auto mb-4 bg-white"></div>
                   <ul class="list-inline">
                       <li class="list-inline-item"><a href="index.html">Home</a></li>
                       <li class="list-inline-item">/</li>
-                      <li class="list-inline-item"><a href="index.html">Department</a></li>
+                      <li class="list-inline-item"><a href="index.html">Schedule</a></li>
                   </ul>
               </div>
           </div>
@@ -148,94 +148,23 @@
   <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="heading">
-        <span class="stroke-text">About</span>
-        <div class="divider mt-2 bg-orange"></div>
-        <h3 class="mb-4 h2 mt-2">Department</h3>
+        <span class="stroke-text">Schedule</span>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis fugit doloribus sunt sapiente, corrupti numquam, earum molestiae iure maxime in nostrum sit facilis nemo. Magnam quam voluptate consequatur inventore numquam?</p> -->
       </div>
     </div>
   </div>
 
-
-
-<div class="row justify-content-center">
+  <div class="row justify-content-center">
     <div class="col-lg-8">
-      <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">Department of Computer Science and Engineering</h3>
-        <div class="d-flex flex-row">
-            <div class="college-image-container">
-                <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
-            </div>
-            <div class="college-description">
-                <p>
-                    Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-                </p>
-                <a href="https://anits.edu.in/#" target="_blank">
-                    <button class="btn btn-primary">
-                        Read More
-                    </button>
-                </a>
-            </div>  
-        </div>
-      </div>
-  </div>
-</div>
-
-
-<div class="row justify-content-center">
-  <div class="col-lg-8">
-    <div class="mb-4 mt-5">
-      <h3 class="mb-4 h2 mt-2">Department of Information Technology</h3>
-      <div class="d-flex flex-row">
-          <div class="college-image-container">
-              <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
+        <div class="mb-4 mt-5">
+            <h4 class="mb-3 border-bottom pb-3">Program Schedule</h4>
+            <p style="font-size: larger;">........
+            </p>
           </div>
-          <div class="college-description">
-              <p>
-                  Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-              </p>
-              <a href="https://anits.edu.in/#" target="_blank">
-                  <button class="btn btn-primary">
-                      Read More
-                  </button>
-              </a>
-          </div>  
-      </div>
-    </div>
-    
-
- 
-</div>
-</div>
-
-<div class="row justify-content-center">
-    <div class="col-lg-8">
-      <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">Department of Computer Science and Engineering (AI&ML, DS)</h3>
-        <div class="d-flex flex-row">
-            <div class="college-image-container">
-                <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
-            </div>
-            <div class="college-description">
-                <p>
-                    Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-                </p>
-                <a href="https://anits.edu.in/#" target="_blank">
-                    <button class="btn btn-primary">
-                        Read More
-                    </button>
-                </a>
-            </div>  
-        </div>
-      </div>
       
-
-   
+  
   </div>
 </div>
-
-
-
 </section>
 
 
