--- a/technical.html
+++ b/technical.html
@@ -46,10 +46,10 @@
  <header class="header-bar">
  	<nav class="navbar navbar-expand-lg main-nav">
  		<div class="container">
-        <h5 class="mt-2 mb-2 left-align">6th International Conference on
+        <a href="index.html"><h5 class="mt-2 mb-2 left-align">6th International Conference on
           <br>
           Smart Computing and Informatics
-        </h5>
+        </h5></a>
  			</a>
 
  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -136,7 +136,7 @@
                   <ul class="list-inline">
                       <li class="list-inline-item"><a href="index.html">Home</a></li>
                       <li class="list-inline-item">/</li>
-                      <li class="list-inline-item"><a href="index.html">Committees</a></li>
+                      <li class="list-inline-item"><a href="index.html">Technical</a></li>
                   </ul>
               </div>
           </div>
