--- a/committee.html
+++ b/committee.html
@@ -169,7 +169,8 @@
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Editorial Board Members</h4>
-        <p style="font-size: larger;">........</p>
+        <p style="font-size: larger;">Prof.M.Rama Krishna Murthy</p>
+        <p style="font-size: larger;">Dr. Vikrant Bhateja, ECE Dept., Shri Ramswaroop Memorial College of Engineering and Management, Lucknow, U.P., India</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Honarary Chair</h4>
@@ -177,19 +178,23 @@
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Conference Chairs</h4>
-        <p style="font-size: larger;">Dr.M.Rama Krishna</p>
+        <p style="font-size: larger;">Dr.M.Rama Krishna Murthy</p>
+        <p style="font-size: larger;">Prof.M.Rekha Sundari</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">General Chairs</h4>
-        <p style="font-size: larger;">.......</p>
+        <p style="font-size: larger;">Dr.Suresh Satpathy</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Publication Chairs</h4>
-        <p style="font-size: larger;">........</p>
+        <p style="font-size: larger;">Dr.K.S.Deepthi</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Technical Programme Committee Chairs</h4>
-        <p style="font-size: larger;">........</p>
+        <p style="font-size: larger;">Dr.Naeem Hannon, University Technology Mara.</p>
+        <p style="font-size: larger;">Prof.K.Venkata Rao, Dept. of CS&SE, A.U.</p>
+        <p style="font-size: larger;">Prof.D.Lalitha Bhaskari, Dept. of CS&SE, A.U.</p>
+        <p style="font-size: larger;">Prof.Y.Srinivas, GITAM University, Dept. of CSE</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Publicity Chairs</h4>
