--- a/crcinstructions.html
+++ b/crcinstructions.html
@@ -44,26 +44,26 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
-    <nav class="navbar navbar-expand-lg main-nav">
-        <div class="container">
+  <nav class="navbar navbar-expand-lg main-nav">
+    <div class="container">
        <h5 class="mt-2 mb-2 left-align">6th International Conference on
          <br>
          Smart Computing and Informatics
        </h5>
-            </a>
+      </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class=""><i class="fas fa-bars"></i>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""><i class="fas fa-bars"></i>
         </span>
-            </button>
+      </button>
 
-            <!--  MAIN MENU  -->
-            <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
+      <!--  MAIN MENU  -->
+      <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
 
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
@@ -76,21 +76,21 @@
            </div>
          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            For Authors &darr;
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-                            <a class="dropdown-item" href="importantdates.html">Important Dates</a>
-                            <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
-                            <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
-                            <a class="dropdown-item" href="schedule.html">Schedule</a>
-                            <a class="dropdown-item" href="registration.html">Registration</a>
-                            <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
-                        </div>
-                    </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              For Authors &darr;
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
+              <a class="dropdown-item" href="importantdates.html">Important Dates</a>
+              <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
+              <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
+              <a class="dropdown-item" href="schedule.html">Schedule</a>
+              <a class="dropdown-item" href="registration.html">Registration</a>
+              <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+            </div>
+          </li>
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -110,15 +110,15 @@
            <a class="nav-link" href="sessions.html">Spl. Sessions</a>
          </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
 
-                <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
-            </div>
-        </div>
-    </nav>
+        <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
+      </div>
+    </div>
+  </nav>
 </header>
  <!-- Navigation End -->
 
@@ -126,17 +126,17 @@
 
 
  <section class="page-header">
-  <div class="department-overly"></div>  
+  <div class="committe-overly"></div>  
   <div class="container">
       <div class="row justify-content-center">
           <div class="col-lg-8">
               <div class="content text-center">
-                  <h1 class="mb-3 text-white text-capitalize letter-spacing">About</h1>
+                  <h1 class="mb-3 text-white text-capitalize letter-spacing">For Authors</h1>
                   <div class="divider mx-auto mb-4 bg-white"></div>
                   <ul class="list-inline">
                       <li class="list-inline-item"><a href="index.html">Home</a></li>
                       <li class="list-inline-item">/</li>
-                      <li class="list-inline-item"><a href="index.html">Department</a></li>
+                      <li class="list-inline-item"><a href="index.html">CRC Instructions</a></li>
                   </ul>
               </div>
           </div>
@@ -148,94 +148,39 @@
   <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="heading">
-        <span class="stroke-text">About</span>
-        <div class="divider mt-2 bg-orange"></div>
-        <h3 class="mb-4 h2 mt-2">Department</h3>
+        <span class="stroke-text">CRC Instructions</span>
+        <h3 class="mb-4 h2 mt-2">Guidelines</h3>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis fugit doloribus sunt sapiente, corrupti numquam, earum molestiae iure maxime in nostrum sit facilis nemo. Magnam quam voluptate consequatur inventore numquam?</p> -->
       </div>
     </div>
   </div>
 
-
-
-<div class="row justify-content-center">
+  <div class="row justify-content-center">
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">Department of Computer Science and Engineering</h3>
-        <div class="d-flex flex-row">
-            <div class="college-image-container">
-                <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
-            </div>
-            <div class="college-description">
-                <p>
-                    Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-                </p>
-                <a href="https://anits.edu.in/#" target="_blank">
-                    <button class="btn btn-primary">
-                        Read More
-                    </button>
-                </a>
-            </div>  
-        </div>
-      </div>
-  </div>
-</div>
-
-
-<div class="row justify-content-center">
-  <div class="col-lg-8">
-    <div class="mb-4 mt-5">
-      <h3 class="mb-4 h2 mt-2">Department of Information Technology</h3>
-      <div class="d-flex flex-row">
-          <div class="college-image-container">
-              <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
-          </div>
-          <div class="college-description">
-              <p>
-                  Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-              </p>
-              <a href="https://anits.edu.in/#" target="_blank">
-                  <button class="btn btn-primary">
-                      Read More
-                  </button>
-              </a>
-          </div>  
-      </div>
-    </div>
-    
-
- 
-</div>
-</div>
-
-<div class="row justify-content-center">
-    <div class="col-lg-8">
-      <div class="mb-4 mt-5">
-        <h3 class="mb-4 h2 mt-2">Department of Computer Science and Engineering (AI&ML, DS)</h3>
-        <div class="d-flex flex-row">
-            <div class="college-image-container">
-                <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="college-image"/>
-            </div>
-            <div class="college-description">
-                <p>
-                    Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-                </p>
-                <a href="https://anits.edu.in/#" target="_blank">
-                    <button class="btn btn-primary">
-                        Read More
-                    </button>
-                </a>
-            </div>  
-        </div>
+        <ul class="list-unstyled">
+            <li class="mb-2">⚈ You are advised to address the comments of the reviewers in your final paper suitably which are intended to help you to improve your paper for final publication. </li>
+            <li class="mb-2">⚈ The corresponding author should be clearly indicated. Put a star mark on the mail id of corresponding author positively. </li>
+            <li class="mb-2">⚈ Authors should not mention designation etc. in the name and affiliation part below the paper title. You are requested to mention only name, college/organization name and mail ids of all the authors compulsorily. However, they may mention acknowledgement if necessary (at the end of the paper-prior to references). Kindly mention full name of your institution and city name. </li>
+            <li class="mb-2">⚈ Authors should not give any photo and biography at the end of the paper. </li>
+            <li class="mb-2">⚈ Cite all figures and tables used in the body of the text. Check English sentences, grammars and spelling carefully. You are advised to take support from some expert on this if necessary. </li>
+            <li class="mb-2">⚈ It is mandatory that the submitted manuscript is solely from the authors’ own work and not from the work of others (unless explicit permission for the same has been granted). This includes text, figures and tables. Information from published articles must always be cited explicitly. Proper citation is to give the credit to the work that is originally published (not to follow-up work or reviews). </li>
+            <li class="mb-2">⚈ Citations should be given close to the information within the sentences or at the end of the sentence, not after several sentences or near the end of the paragraph. Even when citations are given, exact copying of a whole sentence or paragraphs should be indicated by quotation marks. Furthermore, reuse of part of a published figure or table requires a copyright permission from the publishers that hold the rights. All re-published figures and tables should explicitly indicate the original source. </li>
+            <li class="mb-2">⚈ All references which are cited must be complete in terms of details like: Year of publication, Vol No, Issue No, pages, name of conference/journal etc. wherever required. All references listed in the end (under reference section of your paper ) must be cited in the body of the text. </li>
+            <li class="mb-2">⚈ Please note that Springer will make a quality check of each final paper prior to sending it for production. If any issue of plagiarism is detected which is not within the Springer policy then the paper may be rejected even though authors might have registered. Neither the Editorial board nor the Organizing committee will be responsible in this case. Hence, we advise authors to carefully prepare their final paper. Plagiarism policy for springer is available in springerlink.</li>
+            <li class="mb-2">⚈ Springer CRC formatting template is available on conference website.</li>
+            The version of this final CRC will be used for preparation of the conference schedule, souvenir and will be sent in proceedings to Springer. You are requested not to bother for uploading this version on easychair.
+            <li style="color: red; margin-top: 10px;">Important Point:</li>
+            <ul class="list-unstyled">
+            <li class="mb-2">⚈ Authors are strictly and strongly advised to mention following as DECLARATION before the Reference section if authors are using any non-benchmark images/data and not able to cite the source of these.
+            "We have taken permission from competent authorities to use the images/data as given in the paper. In case of any dispute in the future, we shall be wholly responsible."</li>
+            </ul>
+         </ul>
       </div>
       
-
-   
+  
   </div>
 </div>
-
-
-
 </section>
 
 
