--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 		</div>
 	</div>
 </section>
-<section class="section about">
+<!-- <section class="section about">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-5 col-md-5">
@@ -209,7 +209,7 @@
               . Submit the paper through EasyChair
               ☆ Special Session <span style="color:chocolate">"Emerging Trends in Machine Learning, Deep Learning & Computational Intelligence"</span></p>
 
-						<!-- <a href="#" class="btn btn-hero btn-rounded mt-3">Discover More </a> -->
+						<a href="#" class="btn btn-hero btn-rounded mt-3">Discover More </a> 
 					</div>
 				</div>
 			</div>
@@ -233,7 +233,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <!-- Section START-->
 <section id="section-feature" class="section-bottom" >
@@ -242,7 +242,7 @@
             <div class="col-lg-6 col-md-8">
                 <div class="feature-box">
                     <i class="fas fa-microphone"></i>
-                    <h4 class="mt-3 mb-3">About SCI</h4>
+                    <h4 class="mt-3 mb-3">About the Conference</h4>
                     <div class="divider"></div>
                     <p>The aim of the 6th International Conference on Smart Computing and Informatics (SCI-2022) is to present a unified platform for advanced and multi-disciplinary research towards the design of smart computing and informatics. The theme is on a broader front focuses on various innovation paradigms in system knowledge, intelligence and sustainability that may be applied to provide realistic solutions to varied problems in society, environment and industries. The scope is also extended towards the deployment of emerging computational and knowledge transfer approaches, optimizing solutions in various disciplines of science, technology and healthcare. The conference proceeding aims the publication of quality and unpublished work.</p>
                 </div>
@@ -251,7 +251,7 @@
             <div class="col-lg-6 col-md-10">
                 <div class="feature-box mb-md-3 mt-3">
                     <i class="fas fa-globe"></i>
-                    <h4 class="mt-3 mb-3">About Anil Neerukonda Institute Of Technology and Sciences</h4>
+                    <h4 class="mt-3 mb-3">About the College</h4>
                      <div class="divider"></div>
                     <p>Anil Neerukonda Institute of Technology & Sciences (ANITS) in Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL), a renowned Indian infrastructure company headquartered in Hyderabad. Established in 2001-02 by the Anil Neerukonda Educational Society (ANES), it was founded by Dr. N.B.R. Prasad, an NRI philanthropist, in memory of his son, Anil Neerukonda.
 
